@@ -187,7 +187,7 @@ name   = "SMT Layer"
   category   = "regular"
   long       = "produce-unsat-cores"
   type       = "bool"
-  help       = "turn on unsat core generation"
+  help       = "turn on unsat core generation. Unless otherwise specified, cores will be produced using SAT soving under assumptions and preprocessing proofs."
 
 [[option]]
   name       = "unsatCoresMode"
