@@ -1,3 +1,4 @@
+; COMMAND-LINE: --no-check-unsat-cores
 (set-logic QF_UFNIA)
 (set-info :status unsat)
 (declare-fun pow2 (Int) Int)
