@@ -4,6 +4,11 @@ Changes since 1.8
 =================
 
 New Features:
+
+* New unsat-core production modes based on the new proof infrastructure
+  (`--unsat-cores-mode=sat-proof`) and on the solving-under-assumption feature
+  of Minisat (`--unsat-cores-mode=assumptions`). The mode based on SAT
+  assumptions + preprocessing proofs is the new default.
 * A new parametric theory of sequences whose syntax is compatible with the
   syntax for sequences used by Z3.
 * Arrays: Added support for an `eqrange` predicate. `(eqrange a b i j)` is true
